--- a/.github/workflows/sync-ghost.yml
+++ b/.github/workflows/sync-ghost.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: "20"
 
       - name: Install dependencies
-        run: npm install axios gray-matter markdown-it
+        run: npm install axios gray-matter markdown-it jsonwebtoken
 
       - name: Run sync script
         run: node sync-ghost.js
