--- a/.github/workflows/sync-ghost.yml
+++ b/.github/workflows/sync-ghost.yml
@@ -27,10 +27,14 @@ jobs:
         id: changed_files
         run: |
           # Get all added/modified .md files in the push
-          echo "FILES=$(git diff --name-only ${{ github.sha }}^ ${{ github.sha }} | grep '\.md$' || true)" >> $GITHUB_ENV
+          CHANGED_MD=$(git diff --name-only ${{ github.sha }}^ ${{ github.sha }} | grep '\.md$' || true)
+          echo "CHANGED_MD=$CHANGED_MD" >> $GITHUB_ENV
 
       - name: Run sync script
-        run: node sync-ghost.js $FILES
         env:
           GHOST_ADMIN_API_URL: ${{ secrets.GHOST_ADMIN_API_URL }}
           GHOST_ADMIN_API_KEY: ${{ secrets.GHOST_ADMIN_API_KEY }}
+          CHANGED_MD: ${{ env.CHANGED_MD }}
+        run: |
+          echo "Files to sync: $CHANGED_MD"
+          node sync-ghost.js $CHANGED_MD
